sample index html

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,18 +2,10 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Pokemon Teams</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>WhereInTheHouse</title>
+    <script src="src/index.js" charset="utf-8"></script>
   </head>
   <body>
-    <header>
-      <h2>Pokemon Teams!</h2>
-    </header>
-
-    <main>
-      <!-- Add our Pokemon -->
-    </main>
-
-    <script src="./src/index.js"></script>
   </body>
+</html>
 </html>
