--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,8 +4,36 @@
     <meta charset="utf-8">
     <title>WhereInTheHouse</title>
     <script src="src/index.js" charset="utf-8"></script>
-  </head>
+<style>
+
+html {
+    height: 100%;
+}
+body {
+    height: 100%;
+    margin: 0;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+/* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#000533+0,2989d8+100,7db9e8+100 */
+background: #000533; /* Old browsers */
+background: -moz-linear-gradient(top,  #000533 0%, #2989d8 100%, #7db9e8 100%); /* FF3.6-15 */
+background: -webkit-linear-gradient(top,  #000533 0%,#2989d8 100%,#7db9e8 100%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(to bottom,  #000533 0%,#2989d8 100%,#7db9e8 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000533', endColorstr='#7db9e8',GradientType=0 ); /* IE6-9 */
+
+}
+.centered {
+  position: fixed;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+</style>
+    </head>
   <body>
+    <img class="centered" src="assets/7136420.png" style="height:70%; z-index:-2">
+    <img src="assets/5818457.png" style="background: transparent;height:50%; position:fixed; top:50%; left:10%">
+    <img src="assets/716228.png" style="background: transparent;height:50%; position:fixed; top:50%; right:10%">
   </body>
 </html>
 </html>
