--- a/frontend/index.html
+++ b/frontend/index.html
@@ -55,7 +55,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000533', end
     <img class="centered" src="assets/6585761-1.png" style="height:70%; z-index:-2">
     <img src="assets/text.png" style="background: transparent;height:50%; position:fixed; top:10%; left:10%">
     <img src="assets/5818457.png" style="background: transparent;height:50%; position:fixed; top:50%; left:10%; z-index:2;">
-    <img src="assets/716228.png" style="background: transparent;height:50%; position:fixed; top:50%; right:10%; z-index:2;">
+    <img src="assets/7166228.png" style="background: transparent;height:50%; position:fixed; top:50%; right:10%; z-index:2;">
 
 <div class="shadow centered">
  <div class="top"></div>
