--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>WhereInTheHouse</title>
     <script src="src/index.js" charset="utf-8"></script>
-    <link rel="stylesheet" href="assets/stylesheets/main.css" /><style>
+    <link rel="stylesheet" href_="assets/stylesheets/main.css" /><style>
 
 html {
     height: 100%;
@@ -27,6 +27,14 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000533', end
   top: 40%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+.navigation {
+  position: fixed;
+  top: 50%;
+  left: 30%;
+  transform: translate3d(-50%, -50%, -50%);
+  z-index: 3;
 }
 
  .square-box{width:600px;}
@@ -52,18 +60,23 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000533', end
 </style>
     </head>
   <body>
+<div style="width:100px">
     <img class="centered" src="assets/6585761-1.png" style="height:70%; z-index:-2">
     <img src="assets/text.png" style="background: transparent;height:50%; position:fixed; top:10%; left:10%">
     <img src="assets/5818457.png" style="background: transparent;height:50%; position:fixed; top:50%; left:10%; z-index:2;">
     <img src="assets/7166228.png" style="background: transparent;height:50%; position:fixed; top:50%; right:10%; z-index:2;">
 
-<div class="shadow centered">
- <div class="top"></div>
- <div class="content">
- Login form here...
- </div>
- <div class="bottom"></div>
- </div>
+  <div class="navigation" style="min-width:200px">
+    <input type="button" value="Put stuff away...">
+    <input type="button" value="Look for something...">
+    <input type="button" value="Browse for stuff...">
+</div>
+    <div class="shadow centered">
+      <div class="content">
+      Login form here...
+      </div>
+  </div>
+</div>
   </body>
 </html>
 </html>
