button event listeners

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -67,9 +67,9 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000533', end
     <img src="assets/7166228.png" style="background: transparent;height:50%; position:fixed; top:50%; right:10%; z-index:2;">
 
   <div class="navigation" style="min-width:200px">
-    <input type="button" value="Put stuff away...">
-    <input type="button" value="Look for something...">
-    <input type="button" value="Browse for stuff...">
+    <input class="button" id="btn1" type="button" value="Put stuff away...">
+    <input class="button" id="btn2" type="button" value="Look for something...">
+    <input class="button" id="btn3" type="button" value="Browse for stuff...">
 </div>
     <div class="shadow centered">
       <div class="content">
