target element and population test

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,6 +12,7 @@ html {
 body {
     height: 100%;
     margin: 0;
+    min-width: 300px;
     background-repeat: no-repeat;
     background-attachment: fixed;
 /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#000533+0,2989d8+100,7db9e8+100 */
@@ -72,7 +73,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000533', end
     <input class="button" id="btn3" type="button" value="Browse for stuff...">
 </div>
     <div class="shadow centered">
-      <div class="content">
+      <div class="content" id="content">
       Login form here...
       </div>
   </div>
