--- a/frontend/index.html
+++ b/frontend/index.html
@@ -57,7 +57,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000533', end
   top: 75%;
 }
 
-.content{
+.content-div{
   margin-left:20px;
 }
 
@@ -77,7 +77,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000533', end
     <input class="button" id="btn3" type="button" value="Browse for stuff...">
 </div>
     <div class="shadow centered">
-      <div class="content" id="content">
+      <div class="content-div" id="content" style="overflow-y:auto">
       Login form here...
       </div>
   </div>
