create item hitting the server

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -82,7 +82,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000533', end
       </div>
     <div id="new-item-container">
       <form id="new-item-form">
-        <input type="text" name="item-body" id="new-item-body">
+        <input type="text" name="item-name" id="new-item-name">
         <input type="submit" value="Save item">
       </form>
     </div>
