--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,85 +1,28 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>WhereInTheHouse</title>
-    <link rel="stylesheet" href="assets/stylesheets/main.css" /><style>
-    <link rel="stylesheet" href="assets/stylesheets/styles.css" /><style>
-
-html {
-    height: 100%;
-}
-body {
-    height: 100%;
-    margin: 0;
-    min-width: 300px;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-/* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#000533+0,2989d8+100,7db9e8+100 */
-background: #000533; /* Old browsers */
-background: -moz-linear-gradient(top,  #000533 0%, #2989d8 100%, #7db9e8 100%); /* FF3.6-15 */
-background: -webkit-linear-gradient(top,  #000533 0%,#2989d8 100%,#7db9e8 100%); /* Chrome10-25,Safari5.1-6 */
-background: linear-gradient(to bottom,  #000533 0%,#2989d8 100%,#7db9e8 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000533', endColorstr='#7db9e8',GradientType=0 ); /* IE6-9 */
-
-}
-.centered {
-  position: fixed;
-  top: 40%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-.navigation {
-  position: fixed;
-  top: 50%;
-  left: 30%;
-  transform: translate3d(-50%, -50%, -50%);
-  z-index: 3;
-}
-
- .square-box{width:600px;}
- .square-box .top{background:url('http://i.imgur.com/KRjgdhP.jpg') no-repeat 0 0; height:27px; float:left; width:100%;}
- .square-box .content{background:url('http://i.imgur.com/zjNrRfD.jpg') repeat-y 0 0; min-height:100px; padding:0 5%;  float:left; width:90%;}
- .square-box .bottom{background:url('http://i.imgur.com/mOXsXSQ.jpg') no-repeat 0 0;  height:27px;  float:left; width:100%;}
-
-.shadow {
-  -moz-box-shadow:    3px 3px 5px 6px #ccc;
-  -webkit-box-shadow: 3px 3px 5px 6px #ccc;
-  box-shadow:         3px 3px 5px 6px #ccc;
-  border-radius:4%; /*supported by all latest Browser*/
-  -moz-border-radius:4%; /*For older Browser*/
-  -webkit-border-radius:4%;/*For older Browser*/
-  background-color:whitesmoke;
-  width:40%;
-  height:40%;
-  position: fixed;
-  top: 75%;
-}
-
-.content-div{
-  margin-left:20px;
-}
-
-
-</style>
-    </head>
-  <body>
+<head>
+  <meta charset="utf-8">
+  <title>WhereInTheHouse</title>
+  <link rel="stylesheet" href="assets/stylesheets/main.css" />
+  <link rel="stylesheet" href="assets/stylesheets/style.css" />
+</head>
+<body>
 <div style="width:100px">
-    <img src="assets/6585761-1.png" style="position:fixed; right: 10%; height:80%; z-index:-2">
-    <img src="assets/text.png" style="background: transparent;height:50%; position:fixed; top:10%; left:10%">
-    <img src="assets/5818457.png" style="background: transparent;height:50%; position:fixed; top:50%; left:0%; z-index:2;">
-    <img src="assets/7166228.png" style="background: transparent;height:50%; position:fixed; top:50%; right:0%; z-index:2;">
+  <img src="assets/6585761-1.png" style="position:fixed; right: 10%; height:80%; z-index:-2">
+  <img src="assets/text.png" style="background: transparent;height:50%; position:fixed; top:10%; left:10%">
+  <img src="assets/5818457.png" style="background: transparent;height:50%; position:fixed; top:50%; left:0%; z-index:2;">
+  <img src="assets/7166228.png" style="background: transparent;height:50%; position:fixed; top:50%; right:0%; z-index:2;">
 
   <div class="navigation" style="min-width:200px">
     <input class="button" id="btn1" type="button" value="Put stuff away...">
     <input class="button" id="btn2" type="button" value="Look for something...">
     <input class="button" id="btn3" type="button" value="Browse for stuff...">
-</div>
-    <div class="shadow centered">
-      <div class="content-div" id="items-container" style="overflow-y:auto">
+  </div>
+
+  <div class="shadow centered">
+    <div class="content-div" id="items-container" style="overflow-y:auto">
       Login form here...
-      </div>
+    </div>
     <div id="new-item-container">
       <form id="new-item-form">
         <input type="text" name="item-name" id="new-item-name">
@@ -88,20 +31,16 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000533', end
     </div>
     <div id="items-content">
       <div id="items-container">
-
       </div>
       <div id="item-show">
-
       </div>
     </div>
   </div>
 </div>
-  <script type="text/javascript" src="src/components/item.js"></script>
-  <script type="text/javascript" src="src/adapters/services.js"></script>
-  <script type="text/javascript" src="src/components/items.js"></script>
-  <script type="text/javascript" src="src/components/app.js"></script>
-  <script type="text/javascript" src="src/index.js"></script>
-
 </body>
-</html>
+<script type="text/javascript" src="src/components/item.js"></script>
+<script type="text/javascript" src="src/adapters/services.js"></script>
+<script type="text/javascript" src="src/components/items.js"></script>
+<script type="text/javascript" src="src/components/app.js"></script>
+<script type="text/javascript" src="src/index.js"></script>
 </html>
