--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,46 +1,16 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-<head>
-  <meta charset="utf-8">
-  <title>WhereInTheHouse</title>
-  <link rel="stylesheet" href="assets/stylesheets/main.css" />
-  <link rel="stylesheet" href="assets/stylesheets/style.css" />
-</head>
-<body>
-<div style="width:100px">
-  <img src="assets/6585761-1.png" style="position:fixed; right: 10%; height:80%; z-index:-2">
-  <img src="assets/text.png" style="background: transparent;height:50%; position:fixed; top:10%; left:10%">
-  <img src="assets/5818457.png" style="background: transparent;height:50%; position:fixed; top:50%; left:0%; z-index:2;">
-  <img src="assets/7166228.png" style="background: transparent;height:50%; position:fixed; top:50%; right:0%; z-index:2;">
+  <head>
+    <meta charset="utf-8">
+    <title>AlwaysNote</title>
+    <script src="src/components/app.js" charset="utf-8"></script>
+    <script src="src/adapters/api.js" charset="utf-8"></script>
+    <script src="src/components/item.js" charset="utf-8"></script>
+    <script src="src/index.js" charset="utf-8"></script>
+  </head>
+  <body>
+    <div id='notes-list'></div>
+    <div id='update'></div>
 
-  <div class="navigation" style="min-width:200px">
-    <input class="button" id="btn1" type="button" value="Put stuff away...">
-    <input class="button" id="btn2" type="button" value="Look for something...">
-    <input class="button" id="btn3" type="button" value="Browse for stuff...">
-  </div>
-
-  <div class="shadow centered">
-    <div class="content-div" id="items-container" style="overflow-y:auto">
-      Login form here...
-    </div>
-    <div id="new-item-container">
-      <form id="new-item-form">
-        <input type="text" name="item-name" id="new-item-name">
-        <input type="submit" value="Save item">
-      </form>
-    </div>
-    <div id="items-content">
-      <div id="items-container">
-      </div>
-      <div id="item-show">
-      </div>
-    </div>
-  </div>
-</div>
-</body>
-<script type="text/javascript" src="src/components/item.js"></script>
-<script type="text/javascript" src="src/adapters/services.js"></script>
-<script type="text/javascript" src="src/components/items.js"></script>
-<script type="text/javascript" src="src/components/app.js"></script>
-<script type="text/javascript" src="src/index.js"></script>
+  </body>
 </html>
