--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,14 +2,14 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>AlwaysNote</title>
+    <title>WhereInTheHouse</title>
     <script src="src/components/app.js" charset="utf-8"></script>
     <script src="src/adapters/api.js" charset="utf-8"></script>
     <script src="src/components/item.js" charset="utf-8"></script>
     <script src="src/index.js" charset="utf-8"></script>
   </head>
   <body>
-    <div id='notes-list'></div>
+    <div id='items-list'></div>
     <div id='update'></div>
 
   </body>
