--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,6 +8,11 @@
     <script src="src/components/item.js" charset="utf-8"></script>
     <script src="src/index.js" charset="utf-8"></script>
   </head>
+  <div class="navigation" style="min-width:200px">
+    <input type="button" id="createBtn" value="Put stuff away...">
+    <!-- <input class="button" id="btn2"  value="Look for something..."> -->
+    <input type="button" id="indexBtn" value="Browse for stuff...">
+  </div>
   <body>
     <div id='items-list'></div>
     <div id='update'></div>
