locations datalist builds from locations json

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,6 +6,7 @@
     <script src="src/components/app.js" charset="utf-8"></script>
     <script src="src/adapters/api.js" charset="utf-8"></script>
     <script src="src/components/item.js" charset="utf-8"></script>
+    <script src="src/components/location.js" charset="utf-8"></script>
     <script src="src/index.js" charset="utf-8"></script>
   </head>
   <div class="navigation" style="min-width:200px">
